--- a/src/Components/Styling/Footer.css
+++ b/src/Components/Styling/Footer.css
@@ -1,16 +1,33 @@
 
+.ibottomSection {
+    background-color: #eee;
+    width: 100%;
+}
+
+.ibottomSectionmain {
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    
+}
+
+.ibs1 {
+  
+}
 
 @media screen and (max-width:450px) {
     
 
 .ibottomSection {
     background-color: #eee;
-
+    width: 100%;
 }
 
 .ibottomSectionmain {
     margin: 20px;
-    
+    display: flex;
+    flex-direction: column;
 }
 
 }
@@ -20,7 +37,8 @@
     
 
     .ibottomSection {
-        background-color: #eee;
+        background-color: #444;
+        width: 100%;
     
     }
     
