--- a/src/Styling/Dashboard.css
+++ b/src/Styling/Dashboard.css
@@ -8,10 +8,10 @@
 }
 #navbar {
     padding: 20px;
-    background-color: #eee;
+    width: 100%;
+    background-color: #555;
     position: fixed;
     top: 520px;
-    width: 100%;
 }
 #footer {
     padding-bottom: 60px;
@@ -31,7 +31,9 @@
 .middleSection10 {
     display: flex;
     flex-direction: column;
-    background-color: #eee;
+    background-color: #444;
+    color: white;
+    border-radius: 4px;
     padding: 20px;
     justify-content: center;
     align-items: center;
@@ -51,10 +53,12 @@
     }
     #navbar {
         padding: 20px;
-        background-color: #eee;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        background-color: #555;
         position: fixed;
         top: 520px;
-        width: 100%;
     }
     #footer {
         padding-bottom: 90px;
