--- a/src/Styling/Login.css
+++ b/src/Styling/Login.css
@@ -1,4 +1,27 @@
 
+.Main0 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Form {
+    border-style: inset groove groove;
+    margin-top: 30px;
+   min-height: 400px;
+   min-width: 450px;
+   background-color: #444;
+   display: flex;
+   padding: 20px;
+   gap: 10px;
+   color: white;
+   border-radius: 20px;
+   align-items: center;
+   flex-direction: column;
+}
+
+
 
 @media screen and (max-width:450px) {
     
@@ -15,7 +38,8 @@
     margin-top: 30px;
    min-height: 400px;
    min-width: 250px;
-   background-color: #eee;
+   background-color: #444;
+   color: white;
    display: flex;
    padding: 20px;
    gap: 10px;
@@ -25,3 +49,31 @@
 }
 
 }
+
+
+
+@media screen and (max-width:800px) {
+    
+
+    .Main0 {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .Form {
+        border-style: inset groove groove;
+        margin-top: 30px;
+       min-height: 400px;
+       min-width: 250px;
+       background-color: #444;
+       display: flex;
+       padding: 20px;
+       gap: 10px;
+       border-radius: 20px;
+       align-items: center;
+       flex-direction: column;
+    }
+    
+    }
