--- a/src/Styling/generalStyles.css
+++ b/src/Styling/generalStyles.css
@@ -1,7 +1,8 @@
 
 .topSection {
-    background-color:#eee;
-    height: 20%;
+    background-color:#555;
+    color: white;
+    height: 10%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -16,12 +17,13 @@
 
 @media screen and (max-width:450px) {
     .topSection {
-        background-color:#eee;
-        height: 20%;
-        width: 100%;
+        background-color:#555;
+        color: white;
+        height: 5%;
+        width: 100vw;
         display: flex;
         flex-direction: row;
-        padding: 20px;
+        padding: 10px;
         padding-left: 40px;
         gap: 4%;
     }
