--- a/src/Styling/homepage.css
+++ b/src/Styling/homepage.css
@@ -1,14 +1,16 @@
 .hMain {
-    justify-content: center;
-    align-items: center;
     display: flex;
     flex-direction: column;
-    background-image: radial-gradient(white,#eee);
+    height: 100vh;
+    align-items: center;
+    background-image: url("../Images/UniversityofGhana.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 .middleSectionh {
     background-color: #444;
     color: white;
-    height: 10%;
+    height: 60%;
     padding: 20px;
     gap: 40px;
     margin-top: 20px;
@@ -41,6 +43,17 @@
 }
 
 @media screen and (max-width:450px) {
+    .hMain {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        height: 100%;
+        background-image: url("../Images/UniversityofGhana.jpg");
+        background-repeat: no-repeat;
+        background-size: 100%;
+    }
     
 
 .middleSectionh {
@@ -59,7 +72,8 @@
     background-color: #444;
     height: 40px;
     width: 110px;
-    left: 290px;
+    left: 280px;
+    overflow-x: hidden;
     margin-right: 7px;
     margin-top: 10px;
     color: white;
