--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,25 +1,19 @@
 
-
-body {
-    margin: 0;
-    padding: 0;
-  }
-  
   .app-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: fit-content;
   }
   
   
-  Footer {
+  footer {
     margin-top: auto; 
   }
   
   footer {
     background-color: #333;
     color: white;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
   }
   
