--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -2,7 +2,7 @@
 
 .home-page {
     display: grid;
-    grid-template-rows:  1fr 1fr; /* Three rows */
+    grid-template-rows:  1fr 1fr; 
     height: 100vh;
   }
   .button{
