--- a/src/Pages/Navbar/Navbar.css
+++ b/src/Pages/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background: #3027aa;
-    height: 80px;
+    background: #1a1564;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
