--- a/assignment_work/src/Components/gradepage/gradepoint.css
+++ b/assignment_work/src/Components/gradepage/gradepoint.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    margin: 20px auto;
+    margin-left: 100px;
     text-align: center;
     padding: 20px;
     background-color: #f5f5f5;
