--- a/grade-report/src/style.css
+++ b/grade-report/src/style.css
@@ -306,4 +306,34 @@ th {
     padding: 8px;
 }
 
+/* landing page */
+.home-body {
+    min-height: 100vh;
+    background-image: url("./landing.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.home-container {
+    width: 85%;
+    margin: auto;
+}
+
+.article {
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    transform: translateY(25vh);
+}
+
+.article h1 {
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.article .btn {
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
 
