--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
     background-color: #f8f9fa;
   }
   
+  .Well{
+    font-size: larger;
+    font-weight: bold;
+    color:#000;
+  }
+
   .navbar-brand {
     display: flex;
     align-items: center;
