--- a/webapp/src/components/home.css
+++ b/webapp/src/components/home.css
@@ -37,7 +37,7 @@
     color: rgb(34, 34, 132);
     font-size: 15px;
     font-family: 'Poppins', sans-serif;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .cover1{
