my finalized work

--- a/missing-grade-reporting-system/src/components/InstructorContactPage.css
+++ b/missing-grade-reporting-system/src/components/InstructorContactPage.css
@@ -1,6 +1,6 @@
-.container {
+.instructor-container {
   font-family: 'Arial, sans-serif';
-  margin: 30px;
+  margin-left: 35%;
   align-items: center;
 }
 
