--- a/new_work/src/components/Home.css
+++ b/new_work/src/components/Home.css
@@ -1,20 +1,23 @@
 .home {
-    background-image: url('../images/home_background.jpg');
+    background-image: url('../images/home_background.png');
     background-size: cover; 
   background-position: center;
+  height: 700px;
 }
 
 .schoolname {
-    font-size:35px ;
+    font-size:45px ;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     color: white;
 }
 
 .entrytext{
     text-align: center;
-    margin-top: 250px;
-    font-size: 30px;
-    color: white;
+    margin-top: 300px;
+    font-size: 40px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(0, 99, 197);
 
 }
 
@@ -22,19 +25,23 @@
     text-align: center;
     font-size: 20px;
     color: white;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva;
+    color: rgb(0, 99, 197);
 
 }
 
 .button-container{
     text-align: center;
     align-items: center;
+    margin-top: 250PX;
 
 
 }
 
 .homebutton {
     display: block;
-    /*margin-left: 570px;*/
+    margin-left: 570px;
+    margin-top: 80px;
     font-size: 18px;
     background-color:rgb(189, 156, 108);
     border: none;
@@ -49,4 +56,6 @@
 .homebutton:hover {
     cursor: pointer;
     opacity: 5px;
+    background-color: white;
+    color: rgb(100, 100, 219);
 }
