--- a/new_work/src/components/Login.css
+++ b/new_work/src/components/Login.css
@@ -1,42 +1,48 @@
 .main {
-    background-image:url(../images/school_logo.png) ;
-background-repeat: repeat;
-height: 600px;
-
+  background-image: url(../images/school_logo.png);
+  background-repeat: repeat;
+  height: 600px;
 }
 
 .main-container {
-    position: relative;
-    height: 300px;
-    width: 600px;
-    top: 100px;
-    left: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    background-color:rgb(242, 224, 124);
-    border-radius: 5px;
-  }
-  
-  .title {
-    font-weight: bold;
-    text-align: center;
-    font-size: 35px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-  }
-  
-  .info {
-    text-align: center;
-  }
-  
-  .first {
-    display: block;
-    text-align: center;
-    margin-bottom: 10px;  
-  }
+  position: relative;
+  height: 300px;
+  max-width: 600px; /* Added max-width for responsiveness */
+  margin: 0 auto; /* Center the container horizontally */
+  top: 170px;
+  left: 330px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(242, 224, 124);
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px black;
+}
 
-  .second {
-    text-align: center;
+.title {
+  font-weight: bold;
+  text-align: center;
+  font-size: 35px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
-  }
+.info {
+  text-align: center;
+}
+
+.first,
+.second {
+  width: 100%; /* Make the input fields take up full width */
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.go-button {
+  margin-top: 30px;
+  width: 100%; /* Make the button take up full width */
+  max-width: 100px; /* Limit the maximum width of the button */
+  background-color: rgb(76, 76, 220);
+  border: none;
+  border-radius: 2px;
+}
