--- a/react-app/src/components/MissingGradeForm.module.css
+++ b/react-app/src/components/MissingGradeForm.module.css
@@ -1,6 +1,4 @@
-/* MissingGradeForm.module.css */
 
-/* Apply background image to the body */
 body {
   margin: 0;
   padding: 0;
@@ -9,16 +7,16 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
-  overflow: hidden; /* Prevent default margin/padding on body */
+  overflow: hidden; 
 }
 
 .missingGradeFormContainer {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh; /* Use the full viewport height */
-  max-width: 1000px; /* Adjust as needed */
-  margin: 0 auto; /* Center the container horizontally */
+  height: 100vh; 
+  max-width: 1000px; 
+  margin: 0 auto; 
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
@@ -31,9 +29,9 @@ body {
 }
 
 .missingGradeForm {
-  max-width: 600px; /* Adjust as needed */
-  width: 100%; /* Occupy 100% of the available width */
-  margin-left: auto; /* Push the form to the right */
+  max-width: 600px; 
+  width: 100%; 
+  margin-left: auto; 
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -59,7 +57,7 @@ body {
 .missingGradeFormSubmitButton {
   padding: 8px 12px;
   font-size: 14px;
-  width: auto; /* Adjust the width automatically based on content */
+  width: auto; 
   background-color: #4caf50;
   color: white;
   border: none;
