--- a/fga/src/Styles/ComponentStyles/Footer.css
+++ b/fga/src/Styles/ComponentStyles/Footer.css
@@ -4,7 +4,7 @@
     left: 0px;
     background-color: #439df8c7;
     width: 100%;
-    height: 247px;
+    height: 400px;
   }
 
   .footer li {
@@ -14,37 +14,11 @@
     width: 33%;    
   }
 
- /**
-  .footer-navlinks {
-    position: absolute;
-    top: 798px;
-    left: 69px;
-    display: inline-block;
-    width: 410px;
-    height: 144px;
-  }
 
-  
-
-  .footer-help{
-    position: absolute;
-    top: 798px;
-    left: 984px;
-    display: inline-block;
-    width: 410px;
-    height: 144px;
-  }
-  
-  .instructor {
-    margin: 0;
-  }
-  .footer-instructor {
-    position: absolute;
-    top: 798px;
-    left: 502px;
-    display: inline-block;
-    width: 415px;
-    height: 144px;
-  }
-  
- */
+ @media only screen and (max-width:992px) {
+    .footer li {
+      margin: auto;
+      display: block;
+      width: 90%;
+    }
+ }
