--- a/fga/src/Styles/ComponentStyles/Overview.css
+++ b/fga/src/Styles/ComponentStyles/Overview.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 160px;
     background-color: #fff;
-    margin-left: 40px;
+    margin-left: 40%;
     
   }
 
@@ -14,4 +14,19 @@
   button {
     float: right;    
   }
+
+  .footer {
+    margin-top: -120px;
+  }
+
    
+  @media only screen and (max-width: 992px){
+    .overview {
+      margin-left:30px;
+      margin-right: 30px;
+    }
+    .footer {
+      margin-top: -120px;
+    }
+  }
+  
