--- a/fga/src/Styles/ComponentStyles/SideNav.css
+++ b/fga/src/Styles/ComponentStyles/SideNav.css
@@ -8,7 +8,7 @@
     border-left: solid;
     border-color: rgb(0, 112, 203);
     border-width: 20px;  
-    height: 75vh;
+    height: 600px;
     z-index: 0;
 
   }
@@ -33,4 +33,17 @@
   .navlistul a {
     text-decoration: none;
   }
-  
+
+  @media only screen and (max-width:1024px)  {
+   .side-nav{
+    width: 300px;
+   }       
+  }
+
+  @media only screen and (max-width:992px) {
+    .side-nav{  
+      display: none;
+    }  
+  }
+
+ 
