--- a/fga/src/Styles/PageStyles/InstructorContactPage.css
+++ b/fga/src/Styles/PageStyles/InstructorContactPage.css
@@ -1,6 +1,17 @@
 .container {
-    max-width: 800px;
-    margin: 0 auto;
+    max-width: max-content;
+    margin: auto;
+    /* float: right; */
+    
+}
+
+.container h2 {
+    margin-bottom: 40px;
+    margin-top:  100px;
+}
+
+.container .h3 {
+    margin-bottom: 15px;
 }
 
 .instructor-list {
@@ -9,7 +20,7 @@
 }
 
 .instructor-info {
-    margin-bottom: 8px;
+    margin-bottom: 20px;
 }
 
 button {
