--- a/grade-report-system/src/components/herosection.css
+++ b/grade-report-system/src/components/herosection.css
@@ -4,15 +4,11 @@
     position: relative;
   }
   
-  #heroSection img {
+img {
     width: 100%;
     height: auto;
   }
 
-  img{
-    width: 100%;
-    height: auto;
-  }
   
   #imageText {
     position: absolute;
@@ -20,8 +16,14 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
-    font-size: 2em;
+    font-size: 5em;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
   }
-  
+
+  body::-webkit-scrollbar {
+    display: none;
+    }
+  body{
+    background-color: black;
+  }
