--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -30,7 +30,7 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    transform: rotatsdcbdhsc0deg;
   }
   to {
     transform: rotate(360deg);
