--- a/my-react-app/src/component/LoginPage.css
+++ b/my-react-app/src/component/LoginPage.css
@@ -1,5 +1,5 @@
 .login-page-container {
-  background: linear-gradient(to right, #4d34db, #0d0547);
+  background-image: url(C:\Users\USER\Desktop\11210904_DCIT205_Assignment1\my-react-app\src\component\blank.jpg);
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -7,8 +7,9 @@
 }
 
 .login-page-content {
+  background-color: #fff;
   text-align: center;
-  color: #fff;
+  color: #000000;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -21,6 +22,7 @@
 }
 
 .login-form {
+  color: #000000;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -28,14 +30,14 @@
   margin: 0 auto;
 }
 
-label {
+.label {
   display: flex;
   flex-direction: column;
   text-align: left;
   color: #fff;
 }
 
-input {
+.input {
   padding: 0.5rem;
   border: none;
   border-radius: 4px;
