--- a/src/pages/Homepage/css/index.css
+++ b/src/pages/Homepage/css/index.css
@@ -282,7 +282,7 @@ textarea {
 .page-footer{
   color: white;
   width: 100%;
-  background-color: #846ff7;
+  background-color: black;
   /* height: 20vh; */
 
   padding: 20px 20px 10px;
