--- a/dcit-assignment/src/index.css
+++ b/dcit-assignment/src/index.css
@@ -1,3 +1,11 @@
+@import 'normalize.css';
+@import './components/Dashboard.css';
+@import './components/Footer.css';
+@import './components/HelpAndSupport.css';
+@import './components/InstructorContactPage.css';
+@import './components/LandingPage.css';
+@import './components/LoginPage.css';
+@import './components/MissingGradeForm.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
