--- a/missing-grade-apk/src/components/Login.css
+++ b/missing-grade-apk/src/components/Login.css
@@ -8,6 +8,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #f5f5f5;
+    flex-direction: column;
    }
    
    .login-container,
