--- a/missing-grade-apk/src/components/Report.css
+++ b/missing-grade-apk/src/components/Report.css
@@ -9,6 +9,10 @@ form {
     margin-bottom: 10px;
    }
    
+   .h1-center {
+    text-align: center;
+   }
+
    input,
    textarea {
     width: 100%;
@@ -27,4 +31,14 @@ form {
    
    button:hover {
     background-color: #0056b3;
+   }
+
+   .box {
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    max-width: 600px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
    }
