--- a/missing-grade-apk/src/components/InstructorContactPage.css
+++ b/missing-grade-apk/src/components/InstructorContactPage.css
@@ -8,7 +8,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* height: 100vh; */
+    /*  */
     background-color: #f0f0f0;
    }
    
