--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -67,8 +67,8 @@
 
 
   
-@media (max-width: 768px) {
-    .navbar {
+  @media (max-width: 768px) {
+    .navbar-container {
       flex-direction: column;
       align-items: flex-start;
     }
@@ -86,3 +86,4 @@
       margin-bottom: 5px;
     }
   }
+  
